--- a/ss5_b7.html
+++ b/ss5_b7.html
@@ -32,7 +32,13 @@
                 <td bgcolor="lightgray">Introduction to CSS</td>
                 <td bgcolor="lightgray">John Doe</td>
                 <td bgcolor="lightgray">2024-02-10</td>
-                <td bgcolor="lightgray"><button style="background-color: green; color: white;border-color:lightgrey;">View</button>&nbsp;<button style="background-color:yellow; border-color: lightgrey;">Update</button>&nbsp;<button style="background-color:red; color: white; border-color:lightgrey">Delete</button></td>
+                <td bgcolor="lightgray">
+                <button style="background-color: green; color: white;border-color:lightgrey;">View</button>
+                &nbsp;
+                <button style="background-color:yellow; border-color: lightgrey;">Update</button>
+                &nbsp;
+                <button style="background-color:red; color: white; border-color:lightgrey">Delete</button>
+                </td>
             </tr>
         </div>
         <div>
@@ -41,7 +47,13 @@
                 <td>Understanding Javascript</td>
                 <td>Jane Smith</td>
                 <td>2024-01-22</td>
-                <td><button style="background-color: green; color: white;border-color:lightgrey;">View</button>&nbsp;<button style="background-color:yellow; border-color: lightgrey;">Update</button>&nbsp;<button style="background-color:red; color: white; border-color:lightgrey">Delete</button></td>
+                <td>
+                <button style="background-color: green; color: white;border-color:lightgrey;">View</button>
+                &nbsp;
+                <button style="background-color:yellow; border-color: lightgrey;">Update</button>
+                &nbsp;
+                <button style="background-color:red; color: white; border-color:lightgrey">Delete</button>
+                </td>
             </tr>
         </div>
         <div>
@@ -50,7 +62,13 @@
                 <td bgcolor="lightgray">Web Development Basics</td>
                 <td bgcolor="lightgray">Mike Johnson</td>
                 <td bgcolor="lightgray">2023-12-15</td>
-                <td bgcolor="lightgray"><button style="background-color: green; color: white;border-color:lightgrey;">View</button>&nbsp;<button style="background-color:yellow; border-color: lightgrey;">Update</button>&nbsp;<button style="background-color:red; color: white; border-color:lightgrey">Delete</button></td>
+                <td bgcolor="lightgray">
+                <button style="background-color: green; color: white;border-color:lightgrey;">View</button>
+                &nbsp;
+                <button style="background-color:yellow; border-color: lightgrey;">Update</button>
+                &nbsp;
+                <button style="background-color:red; color: white; border-color:lightgrey">Delete</button>
+                </td>
             </tr>
         </div>
         <div>
@@ -59,7 +77,13 @@
                 <td>Responsive Design Techniques</td>
                 <td>Sarah Lee</td>
                 <td>2023-11-30</td>
-                <td><button style="background-color: green; color: white;border-color:lightgrey;">View</button>&nbsp;<button style="background-color:yellow; border-color: lightgrey;">Update</button>&nbsp;<button style="background-color:red; color: white; border-color:lightgrey">Delete</button></td>
+                <td>
+                <button style="background-color: green; color: white;border-color:lightgrey;">View</button>
+                &nbsp;
+                <button style="background-color:yellow; border-color: lightgrey;">Update</button>
+                &nbsp;
+                <button style="background-color:red; color: white; border-color:lightgrey">Delete</button>
+                </td>
             </tr>
         </div>
         <div>
@@ -68,7 +92,13 @@
                 <td bgcolor="lightgray">SEO Best Practises</td>
                 <td bgcolor="lightgray">Chris Brown</td>
                 <td bgcolor="lightgray">2023-10-18</td>
-                <td bgcolor="lightgray"><button style="background-color: green; color: white;border-color:lightgrey;">View</button>&nbsp;<button style="background-color:yellow; border-color: lightgrey;">Update</button>&nbsp;<button style="background-color:red; color: white; border-color:lightgrey">Delete</button></td>
+                <td bgcolor="lightgray">
+                <button style="background-color: green; color: white;border-color:lightgrey;">View</button>
+                &nbsp;
+                <button style="background-color:yellow; border-color: lightgrey;">Update</button>
+                &nbsp;
+                <button style="background-color:red; color: white; border-color:lightgrey">Delete</button>
+                </td>
             </tr>
         </div>
     </table>
